bug article overflow-y

--- a/src/components/App/styles/layout.scss
+++ b/src/components/App/styles/layout.scss
@@ -49,7 +49,7 @@ nav {
 }
 
 article {
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 footer {
